color changed to skyblue

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>version: beta</h1>
+    <h1 style="color: skyblue">version: beta</h1>
 </body>
 </html>
